# pandorica

./: .gitignore  .gitmodules  Cargo.toml  Cross.toml  README.md  docker-compose.yml  gcp-creds.json
.github/workflows/: audit.yml  build.yml  clippy.yml  lint.yml  nightly-audit.yml  pr-audit.yml  pr-build.yml
cli/: Cargo.toml
cli/src/: client.rs  colorize.rs  commands.rs  helper.rs  main.rs  models.rs  styles.rs
lib/crypto/src/: traits.rs
lib/crypto/src/hsm/: gcp.rs
lib/foreign/: Cargo.toml
lib/identifier/: Cargo.toml
lib/shared/: Cargo.toml
lib/shared/src/: config.rs
lib/singleton/: Cargo.toml
proto/: common.proto
server/: Cargo.toml  build.rs
server/proto/: auth.proto
server/src/: main.rs
server/src/config/: mod.rs
server/src/crypto/: key_provider.rs  mod.rs  traits.rs
server/src/crypto/encryption/: chacha20poly1305.rs  mod.rs
server/src/crypto/hashing/: argon2id.rs  mod.rs
server/src/crypto/hsm/: gcp.rs  mod.rs
server/src/crypto/key_derivation/: mod.rs  scrypt.rs
server/src/fs/: mod.rs
server/src/handlers/: auth.rs  user.rs
server/src/helpers/: authorization.rs
server/src/kms/: mod.rs
server/src/models/auth/: mod.rs  password.rs  session.rs  user.rs
server/src/models/crypto/: dek.rs  encrypted_value.rs  mk.rs  mod.rs
server/src/repos/: mk.rs  mod.rs  password.rs  session.rs  user.rs
server/src/validators/: email.rs  mod.rs  password.rs  user.rs  username.rs
src/: config.rs  main.rs  shared.rs
src/crypto/: crypto_provider.rs  key_provider.rs  mod.rs  traits.rs
src/crypto/encryption/: chacha20poly1305.rs  mod.rs
src/crypto/envelope/: gcp.rs  mod.rs
src/crypto/hashing/: argon2id.rs  mod.rs
src/crypto/keyderivation/: mod.rs  scrypt.rs
src/fs/: mod.rs
src/handlers/: auth.rs
src/handlers/file/: mod.rs  upload.rs
src/models/: mod.rs  password.rs  user.rs
src/models/crypto/: dek.rs  encrypted_value.rs  mk.rs  mod.rs
