[package]
name = "pandorica"
version = "0.1.0"
edition = "2021"
rust-version = "1.67"

[[bin]]
name = "pandorica"
path = "src/main.rs"

[dependencies]
# Async
tokio = { version="1.25", features=["rt-multi-thread", "macros"] }

# gRPC
prost = "0.11"
tonic = "0.8"
tonic-reflection = "0.6"
tonic-web = "0.5"

# Database
surrealdb = { git="https://github.com/surrealdb/surrealdb" }
serde = { version="1.0", features=["derive"] }
serde-binary = "0.5"

# Validation
validator = "0.16"
regex = "1.7"

# Logging
tracing = "0.1"
tracing-subscriber = { version="0.3", features=["env-filter"] }

# Crypto
rand_core = { version="0.6", features=["std"] }
argon2 = "0.4"
scrypt = { version="0.10", default-features=false }
chacha20poly1305 = { version="0.10", features=["stream", "std"] }
gcloud-sdk = { version="0.19", features=["google-cloud-kms-v1"] }
secret-vault-value = "0.3"

# Filesystem
object_store = "0.5"

# Misc
async-trait = "0.1"
lazy_static = "1.4"
once_cell = "1.17"
chrono = "0.4"
clokwerk = "0.4"

[build-dependencies]
# gRPC
tonic-build = { version="0.8", features=["prost"] }