[package]
name = "pandorica"
version = "0.1.0"
edition = "2021"
rust-version = "1.67"

[[bin]]
name = "pandorica"
path = "src/main.rs"

[dependencies]
tokio = { version="^1.25.0", features=["rt-multi-thread", "macros"] }
prost = "^0.11.6"
tonic = "^0.8.3"
tonic-reflection = "^0.6.0"
tonic-web = "^0.5.0"
surrealdb = { git="https://github.com/surrealdb/surrealdb" }
serde = { version="^1.0.152", features=["derive"] }
serde-binary = "^0.5.0"
foreign = { version = "^0.1.0", path = "../lib/foreign" }
validator = "^0.16.0"
regex = "^1.7.1"
tracing = "^0.1.37"
tracing-subscriber = { version="^0.3.16", features=["env-filter"] }
object_store = "^0.5.4"
chrono = "^0.4.23"
clokwerk = "^0.4.0"
anyhow = "^1.0.69"
once_cell = "^1.17.1"
async-trait = "^0.1.66"
secret-vault-value = "^0.3.7"
singleton = { version = "^0.1.0", path = "../lib/singleton" }
shared = { version = "^0.1.0", path = "../lib/shared" }
identifier = { version = "^0.1.0", path = "../lib/identifier" }
crypto = { version = "^0.1.0", path = "../lib/crypto" }

[build-dependencies]
tonic-build = { version="^0.8.4", features=["prost"] }