[package]
name = "pandorica"
version = "0.1.0"
edition = "2021"
rust-version = "1.67"

[[bin]]
name = "pandorica"
path = "src/main.rs"

[dependencies]
anyhow = "^1.0.69"
async-trait = "^0.1.66"
chrono = "^0.4.23"
clokwerk = "^0.4.0"
config = "^0.13.3"
crypto = { version = "^0.1.0", path = "../lib/crypto" }
foreign = { version = "^0.1.0", path = "../lib/foreign" }
identifier = { version = "^0.1.0", path = "../lib/identifier" }
object_store = "^0.5.4"
once_cell = "^1.17.1"
protobuf = { version = "^0.1.0", path = "../lib/protobuf" }
regex = "^1.7.1"
secret-vault-value = "^0.3.7"
serde = { version = "^1.0.152", features = ["derive"] }
serde-binary = "^0.5.0"
shared = { version = "^0.1.0", path = "../lib/shared" }
singleton = { version = "^0.1.0", path = "../lib/singleton" }
surrealdb = { git = "https://github.com/surrealdb/surrealdb" }
tokio = { version = "^1.25.0", features = ["rt-multi-thread", "macros"] }
toml = "^0.7.2"
tonic = "^0.8.3"
tonic-reflection = "^0.6.0"
tonic-web = "^0.5.0"
tracing = "^0.1.37"
tracing-subscriber = { version = "^0.3.16", features = ["env-filter"] }
validator = "^0.16.0"