[package]
name = "singleton"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
singleton-derive = { version = "^0.1.0", path = "../singleton-derive" }
async-trait = "^0.1.65"
tokio = { version = "^1.26.0", default-features=false, features = ["sync"] }
once_cell = "^1.17.1"